Project Types Frontend module created Country Entity remastered Please rebuild your DB after update

--- a/src/main/resources/templates/fragments/countryformfragments.html
+++ b/src/main/resources/templates/fragments/countryformfragments.html
@@ -40,6 +40,7 @@
                                             </select>
                                         </div>
                                     </div>
+                                    <a href="https://www.iban.com/country-codes"><small id="emailHelp" class="form-text text-muted">ISO 3166 ALPHA-2 code format</small></a>
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -86,6 +87,7 @@
                                             </select>
                                         </div>
                                     </div>
+                                    <a href="https://www.iban.com/country-codes"><small id="emailHelp" class="form-text text-muted">ISO 3166 ALPHA-2 code format</small></a>
                                 </div>
                             </div>
                             <div class="modal-footer">
