Stock Types front-end fixed some mistakes

--- a/src/main/resources/templates/fragments/stocktypeformfragments.html
+++ b/src/main/resources/templates/fragments/stocktypeformfragments.html
@@ -27,7 +27,7 @@
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-10 mb-3">
-                                            <input type="text" class="form-control" id="stockTypeName" name="stockTypeName" placeholder="Stock type name" required>
+                                            <input type="text" class="form-control" id="stockName" name="stockName" placeholder="Stock type name" required>
                                         </div>
                                         <div class="col-md-2 mb-3 ml-auto">
                                             <select class="custom-select" name="closed" id="closed">
@@ -92,7 +92,7 @@
                                     <h6 style="font-weight: bold">Main Information</h6>
                                     <div class="form-row">
                                         <div class="col-md-10 mb-3">
-                                            <input type="text" class="form-control" id="stockTypeName" name="stockTypeName" placeholder="Stock type name" required>
+                                            <input type="text" class="form-control" id="stockName" name="stockName" placeholder="Stock type name" required>
                                         </div>
                                         <div class="col-md-2 mb-3 ml-auto">
                                             <select class="custom-select" name="closed" id="closed">
