Small improvements for Audit4j. Auditing columns removed from frontend tables

--- a/src/main/resources/templates/adminpanel/list-users.html
+++ b/src/main/resources/templates/adminpanel/list-users.html
@@ -48,10 +48,10 @@
                     <th scope="col">Role</th>
                     <th scope="col">Enabled</th>
                     <th scope="col">Assigned to...</th>
-                    <th scope="col">Create Date</th>
+                    <!--<th scope="col">Create Date</th>
                     <th scope="col">Created By</th>
                     <th scope="col">Update Date</th>
-                    <th scope="col">Updated By</th>
+                    <th scope="col">Updated By</th>-->
                     <th scope="col">Action</th>
                 </tr>
             </thead>
@@ -63,10 +63,10 @@
                     <td th:text="${users.role}"></td>
                     <td th:text="${users.enabled}"></td>
                     <td th:text="${users.employee}"></td>
-                    <td th:text="${users.createdDate}"></td>
+                    <!--<td th:text="${users.createdDate}"></td>
                     <td th:text="${users.createdBy}"></td>
                     <td th:text="${users.lastModifiedDate}"></td>
-                    <td th:text="${users.lastModifiedBy}"></td>
+                    <td th:text="${users.lastModifiedBy}"></td>-->
                     <td>
                         <a th:href="@{/adminpanel/users/update(id=${users.userId})}" class="btn btn-link editBtn"
                            data-toggle="tooltip"
