--- a/src/main/resources/templates/projects/list-quotations.html
+++ b/src/main/resources/templates/projects/list-quotations.html
@@ -45,10 +45,10 @@
                     <th scope="col">Date</th>
                     <th scope="col">Title</th>
                     <th scope="col">Confirmed</th>
-                    <th scope="col">Created By</th>
+                    <!--<th scope="col">Created By</th>
                     <th scope="col">Create Date</th>
                     <th scope="col">Updated By</th>
-                    <th scope="col">Update Date</th>
+                    <th scope="col">Update Date</th>-->
                 </tr>
             </thead>
             <tbody>
