--- a/src/main/resources/templates/team/list-employee.html
+++ b/src/main/resources/templates/team/list-employee.html
@@ -46,10 +46,10 @@
                     <th scope="col">Department</th>
                     <th scope="col">Mobile Phone</th>
                     <th scope="col">Work Email</th>
-                    <th scope="col">Created By</th>
+                    <!--<th scope="col">Created By</th>
                     <th scope="col">Create Date</th>
                     <th scope="col">Updated By</th>
-                    <th scope="col">Update Date</th>
+                    <th scope="col">Update Date</th>-->
                     <th scope="col">Closed</th>
                 </tr>
             </thead>
