--- a/src/main/resources/templates/projects/list-customers.html
+++ b/src/main/resources/templates/projects/list-customers.html
@@ -43,10 +43,10 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Customer Name</th>
-                    <th scope="col">Created By</th>
+                    <!--<th scope="col">Created By</th>
                     <th scope="col">Create Date</th>
                     <th scope="col">Updated By</th>
-                    <th scope="col">Update Date</th>
+                    <th scope="col">Update Date</th>-->
                     <th scope="col">Closed</th>
                 </tr>
             </thead>
