--- a/src/main/resources/templates/stock/list-suppliers.html
+++ b/src/main/resources/templates/stock/list-suppliers.html
@@ -41,10 +41,10 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Supplier Name</th>
-                    <th scope="col">Created By</th>
+                    <!--<th scope="col">Created By</th>
                     <th scope="col">Create Date</th>
                     <th scope="col">Updated By</th>
-                    <th scope="col">Update Date</th>
+                    <th scope="col">Update Date</th>-->
                     <th scope="col">Closed</th>
                 </tr>
             </thead>
